--- a/lib/admin/admin-sidebar/sidebar-template.jade
+++ b/lib/admin/admin-sidebar/sidebar-template.jade
@@ -1,6 +1,8 @@
 ul.admin-menu.nav.nav-pills.nav-stacked
   - if (forum.privileges.canChangeTopics)
     li: a(href="#{forum.url}/admin/topics" data-section='topics')=t('admin-sidebar.topics.title')
+  - if (user.staff)
+    li: a(href="#{forum.url}/admin/comments" data-section='comments')=t('admin-sidebar.comments.title')
   - if (forum.privileges.canEdit)
     li: a(href="#{forum.url}/admin/permissions" data-section='permissions')=t('admin-sidebar.permissions.title')
   - if (user.staff)
