refactor api calls

--- a/lib/admin/admin-comments/template.jade
+++ b/lib/admin/admin-comments/template.jade
@@ -1,4 +1,4 @@
 #forum-wrapper.admin-wrapper
   .admin-comments
     .actions.well
-      a.btn.btn-primary(href='/api/comment/all.csv', target='_blank')= t('admin-comments.dowload-as-csv')
+      a.btn.btn-primary(href='/api/comment/#{id}/all.csv', target='_blank')= t('admin-comments.dowload-as-csv')
